--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>QR Scanner</title>
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-    <style>
-      body { font-family: sans-serif; text-align: center; padding: 20px; }
-      #reader { width: 100%; max-width: 360px; margin: auto; }
-    </style>
-  </head>
-  <body>
-    <h2>Scan QR to Manage Stamps</h2>
-    <div id="reader"></div>
+<head>
+  <title>QR Scanner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 20px;
+      background: #fefbf5;
+    }
+    #reader {
+      width: 100%;
+      max-width: 360px;
+      margin: auto;
+    }
+  </style>
+</head>
+<body>
+  <h2>Scan QR to Manage Stamps</h2>
+  <div id="reader"></div>
 
-    <script>
-      const bizId = new URLSearchParams(window.location.search).get("biz");
+  <script>
+    const bizId = new URLSearchParams(window.location.search).get("biz");
 
-      function onScanSuccess(decodedText) {
-        const params = new URLSearchParams(decodedText.split("?")[1]);
-        const uid = params.get("scanUserId");
+    function onScanSuccess(decodedText) {
+      const params = new URLSearchParams(decodedText.split("?")[1]);
+      const uid = params.get("scanUserId");
 
-        if (uid && bizId) {
-          window.location.href = `https://zzim.live/business-admin/${bizId}?scanUserId=${uid}`;
-        } else {
-          alert("Invalid QR code.");
-        }
-
-        html5QrcodeScanner.clear();
+      if (uid && bizId) {
+        window.location.href = `https://yourwixsite.com/business-admin/${bizId}?scanUserId=${uid}`;
+      } else {
+        alert("Invalid QR code.");
       }
 
-      const html5QrcodeScanner = new Html5QrcodeScanner(
-        "reader", { fps: 10, qrbox: 250 }, false
-      );
-      html5QrcodeScanner.render(onScanSuccess);
-    </script>
-  </body>
+      html5QrcodeScanner.clear();
+    }
+
+    const html5QrcodeScanner = new Html5QrcodeScanner("reader", {
+      fps: 10, qrbox: 250
+    }, false);
+    html5QrcodeScanner.render(onScanSuccess);
+  </script>
+</body>
 </html>
